# auto_search_rubric

./: .gitignore  AGENTS.md  README.en.md  README.md  README.zh.md  ROADMAP.md  ROADMAP_ARCHITECTURE.md  STAGE0_IMPLEMENTATION.md  STAGE1_IMPLEMENTATION.md  package-lock.json  pyproject.toml
autosr/: __init__.py  cli.py  config.py  content_extraction.py  data_models.py  evaluator.py  exceptions.py  factory.py  interfaces.py  io_utils.py  llm_client.py  llm_components.py  llm_config.py  mix_reward.py  mock_components.py  models.py  search.py  types.py
docs/: ARCHITECTURE.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  ROADMAP.md
examples/: advanced_evolutionary_config.py  demo_content_extraction.py  demo_dataset.json  demo_dataset_with_rank.json  run_with_content_extraction.sh  single_case.json  single_case_with_rank.json
prompts/: judge.json  rubric_proposer.json  verifier.json
reward_harness/: __init__.py  cli.py  config.py  data_models.py  evaluator.py  exceptions.py  factory.py  interfaces.py  io_utils.py  llm_client.py  llm_config.py  mix_reward.py  mock_components.py  models.py  types.py
scripts/: convert_writing_rubrics_to_artifact.py  deploy_writing_rm_server.sh  generate_writing_candidates.py  run_formal_search.sh  run_quality_checks.sh  run_tests.sh  run_tests_integration.sh  run_tests_unit.sh  test_rm_server.sh  validate_docs.py
tests/: test_adaptive_mutation.py  test_architecture_refactor.py  test_cli_backend_selection.py  test_cli_best_candidates.py  test_cli_reproducibility.py  test_config_consistency.py  test_content_extraction.py  test_data_models_compat.py  test_docs_validation.py  test_evaluator.py  test_evolutionary_decoupling.py  test_exceptions_module.py  test_harness_stage0.py  test_harness_stage1.py  test_io_utils.py  test_llm_client_resilience.py  test_llm_components_unit.py  test_llm_integration.py  test_mix_reward.py  test_models.py  test_no_hardcoded_secrets.py  test_openrouter_integration.py  test_prompt_language.py  test_reward_harness_compat.py  (+11 more)
(+146 files in other folders)
