[project]
name = "autosr"
version = "0.1.0"
description = "Tail-focused rubric search framework inspired by Chasing the Tail"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
]

[project.scripts]
autosr = "autosr.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autosr*"]
