[project]
name = "autosr"
version = "0.1.0"
description = "Tail-focused rubric search framework inspired by Chasing the Tail"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pyyaml>=6.0.3",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autosr*"]

[tool.uv]
package = false
