[project]
name = "autosr"
version = "0.1.0"
description = "Tail-focused rubric search framework inspired by Chasing the Tail"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pyyaml>=6.0.3",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autosr*", "reward_harness*"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["autosr", "tests", "scripts"]
extend-exclude = [
  "artifacts",
  "docs/generated",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Stage E readiness starts with correctness-oriented checks. Existing style,
  # import ordering, and pyupgrade debt should be paid down in follow-up slices.
  "E501",
  "I001",
  "E402",
  "UP017",
  "UP035",
  "UP037",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
follow_imports = "skip"
